# calculator

./: .gitignore  setup.cfg  setup.py
src/controllers/: calculadora_controller.py
src/views/: teste.ipynb
