[options]
python_requires = >= 3.10

[aliases]
test=pytest

[tool:pytest]
addopts=--cov=src --doctest-modules --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html tests/

[isort]
profile = hug
line_length = 120

[mypy]
# files = 
show_error_codes = True
follow_imports = silent
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = True
plugins = sqlalchemy.ext.mypy.plugin


[mypy-papermill.*]
ignore_missing_imports=True


[pylint.MASTER]
# ignore-paths=
ignore=.venv, build, setup.py, tests
good-names=id

[pylint.FORMAT]
max-line-length = 120

[pylint.'MESSAGES CONTROL']
disable = missing-docstring,no-self-use,too-many-arguments,too-few-public-methods,invalid-name,use-a-generator

[yapf]
based_on_style = pep8
column_limit = 120